--- a/src/components/Servicios/Backdrop.module.css
+++ b/src/components/Servicios/Backdrop.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 1;
     background-color: #000000;
-    opacity: 80%;
+    opacity: 0.8;
     width: 100%;
     height: 100vh;
     top: 0;
