--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -69,7 +69,7 @@ nav {
         position: absolute;
         right: 0px;
         height: 50vh;
-        top: 8vh;
+        top: 90px;
         background-color: #cee5d0;
         display: flex;
         flex-direction: column;
